tests/semantic/type_system16/type_system16.err
Error: syntax error, unexpected /, expecting ( or . in file type_system16.dl at line 22
R($Divide($Mult($Add($Number(5), $Number(5)), $Number(2)), $Minus($Number(4), $Number / (1)))).
--------------------------------------------------------------------------------------^---------
1 errors generated, evaluation aborted
